<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gus.datoscontacto.ConfirmarDatos">

    <TextView
        android:id="@+id/titConfDatos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txtConfDatos"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtConfNombreContacto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/txtNombreContacto"
        app:layout_constraintBottom_toTopOf="@+id/txtConfFnac"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titConfDatos" />

    <TextView
        android:id="@+id/txtConfFnac"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:text="@string/txtFnacConf"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtConfFnacValor"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtConfFnacValor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/txtConfFnac"
        app:layout_constraintTop_toBottomOf="@+id/txtConfNombreContacto" />

    <TextView
        android:id="@+id/txtConfTel"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:layout_marginStart="8dp"
        android:text="@string/txtTelConf"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtConfTelValor"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtConfTelValor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/txtConfTel"
        app:layout_constraintTop_toBottomOf="@+id/txtConfFnac" />

    <TextView
        android:id="@+id/txtConfMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/txtEmailConf"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtConfEmailValor"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtConfEmailValor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/txtConfMail"
        app:layout_constraintTop_toBottomOf="@+id/txtConfTel" />

    <TextView
        android:id="@+id/txtConfDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/txtDescContactoConf"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtConfDescValor"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtConfDescValor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/txtConfDesc"
        app:layout_constraintTop_toBottomOf="@+id/txtConfMail" />

    <Button
        android:id="@+id/btnEditDatos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/btnEditDatos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtConfDescValor"
        app:layout_constraintVertical_bias="0" />


</android.support.constraint.ConstraintLayout>
